<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <Button
        android:id="@+id/hideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/hide_button_text" />

    <ImageView
        android:id="@+id/hostImageView"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/default_border"
        android:clickable="true"
        android:contentDescription="@string/selected_image_desc"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/hostText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hostImageView"
        android:layout_centerHorizontal="true"
        android:text="@string/image_hint" />

    <ImageView
        android:id="@+id/secretImageView"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_below="@+id/hostText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/default_border"
        android:clickable="true"
        android:contentDescription="@string/selected_image_desc"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/secretText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secretImageView"
        android:layout_centerHorizontal="true"
        android:text="@string/image_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/hostImageView"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="53dp"
        android:layout_marginLeft="8dp"
        android:text="@string/host_image"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/secretImageView"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="53dp"
        android:layout_marginLeft="8dp"
        android:text="@string/secret_image"
        android:textSize="12sp"
        android:textStyle="bold" />

</RelativeLayout>