<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <Button
        android:id="@+id/hideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/hide_button_text" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/default_border"
        android:clickable="true"
        android:contentDescription="@string/selected_image_desc"
        android:scaleType="centerCrop" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/hideButton" >

        <EditText
            android:id="@+id/textInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/hide_hint"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect" >
        </EditText>
    </ScrollView>

    <TextView
        android:id="@+id/inputStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hideButton"
        android:layout_alignBottom="@+id/hideButton"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/imageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/image_hint" />

</RelativeLayout>